[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/UI/Dialogues/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://assets/portraits/NPCDummy.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/hud/Stop.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Commons/RichTextLabel/AutoScrollLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/UI/hud/ArrowDown.png" type="Texture" id=5]
[ext_resource path="res://assets/theme/Game.tres" type="Theme" id=6]
[ext_resource path="res://assets/theme/joystix_10.tres" type="DynamicFont" id=7]
[ext_resource path="res://src/UI/Commons/TextureRect/InteractableAtlasIcon.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/Click/click1.ogg" type="AudioStream" id=9]
[ext_resource path="res://src/SFX/SFXPlayer.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Wrapper:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.513726 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 4.59481 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/Wrapper:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/NameContent:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/Wrapper:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/NameContent:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Next:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("End:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 4.59481, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/Wrapper:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/NameContent:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/Wrapper:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/NameContent:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("End:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.54902 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Next:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 236, 85 ), Vector2( 236, 85 ), Vector2( 236, 80 ), Vector2( 236, 85 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Choices:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Choices:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.937255, 0.737255, 0.156863, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="AnimationPlayerDialogue" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="AnimationPlayerActions" type="AnimationPlayer" parent="."]
anims/end = SubResource( 4 )
anims/next = SubResource( 5 )

[node name="AnimationPlayerChoices" type="AnimationPlayer" parent="."]
anims/show = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Panel" type="Panel" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 440.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 200, 35 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrapper" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Contents" type="HBoxContainer" parent="Panel/Wrapper"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 60.0
custom_constants/separation = 12

[node name="Portrait" type="TextureRect" parent="Panel/Wrapper/Contents"]
margin_right = 40.0
margin_bottom = 50.0
texture = ExtResource( 2 )

[node name="Message" parent="Panel/Wrapper/Contents" instance=ExtResource( 4 )]
margin_left = 52.0
margin_top = 0.0
margin_right = 380.0
margin_bottom = 50.0

[node name="SFXPlayer" parent="Panel/Wrapper/Contents/Message" instance=ExtResource( 10 )]
stream = ExtResource( 9 )
repeat_mode = false

[node name="NameContent" type="Panel" parent="Panel"]
margin_left = -23.2313
margin_top = 61.3715
margin_right = 128.769
margin_bottom = 83.3715
rect_pivot_offset = Vector2( 56, 11 )
custom_styles/panel = SubResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/NameContent"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="Name" type="Label" parent="Panel/NameContent/MarginContainer"]
margin_left = 4.0
margin_top = 5.0
margin_right = 148.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 7 )
text = "Name"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="."]
anchor_left = 0.7
anchor_top = 0.37
anchor_right = 0.893
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -0.900002
margin_right = 1.35995
margin_bottom = 1.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -50.0
margin_right = 4.0
margin_bottom = -42.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.99998
margin_top = -50.0
margin_right = 5.00002
margin_bottom = -42.0
rect_pivot_offset = Vector2( 4, 4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractableAtlasIcon" parent="." instance=ExtResource( 8 )]
margin_left = 417.0
margin_top = 82.0
margin_right = 433.0
margin_bottom = 98.0
grow_horizontal = 0
action = "jump"
